语法分析 架构调整完成，但仍然没过